Fix image spacing on projects page
Made the spacing of the images on the projects page better.

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -72,6 +72,9 @@ a:hover{
 	width: 55rem;
 }
 .previewImg{
+	display: block;
+	margin: auto;
 	height: 20em;
 	padding: 5px;
+
 }
